# shift-forex-tester-data

./: README.md  env.sh  pyproject.toml
tests/: EURUSD.csv  EURUSD2.csv  test_smoke.py
