[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'shift-forex-tester-data'
dynamic = ['version']
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    'attrs',
    'click',
    'python-dateutil',
]

[project.scripts]
shiftdata = 'shiftdata.cli:cli'

[project.urls]
Homepage = 'https://github.com/bachew/shift-forex-tester-data'
Repository = 'https://github.com/bachew/shift-forex-tester-data'

[tool.setuptools.dynamic]
version = {attr = 'shiftdata.__version__'}

[tool.setuptools.packages.find]
where = ['src']
